# mkdocs_sample

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: index.md  mermaid.md  other.md
docs/csv/: sample.csv
mermaid/: index.html
other/: index.html
search/: search_index.json
